internal/queryfile/testdata/invalid/malformed_annotation.cypher
// name: MissingCardinality
MATCH (p:Person) RETURN p
